# mlops-core

./: .cursorignore  .dockerignore  .dvcignore  .flake8  .gitignore  Dockerfile  Makefile  README.md  RESUME_PROJET.md  SEMAINE_1_LIVRABLES.md  app.py  docker-compose.yml  dvc.yaml  env.example  example_usage.py  params.yaml  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: ci.yml
docs/: ANALYSE_PROJET.md  CONFIGURATION_CI.md  PHASE_1.md  PHASE_2.md  PHASE_3.md  PHASE_4.md  PHASE_5.md  README.md  SEMAINE_1.md  SEMAINE_2.md  SEMAINE_2_RESUME.md  SEMAINE_3.md  SEMAINE_4.md  SEMAINE_5.md  VERIFICATION_SEMAINES.md  cicd.md  experimentation.md  infrastructure.md  observability.md  orchestration.md  serving-containerisation.md
k8s/: ARCHITECTURE.md  README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  mlflow-deployment.yaml  mlflow-pvc.yaml  mlflow-service.yaml  models-pvc.yaml  namespace.yaml  network-policy.yaml  secret.yaml.example  service-nodeport.yaml  service.yaml  train-job.yaml
k8s/monitoring/: README.md  alertmanager-configmap.yaml  alertmanager-deployment.yaml  deploy.sh  grafana-configmap.yaml  grafana-dashboards-configmap.yaml  grafana-deployment.yaml  prometheus-configmap.yaml  prometheus-deployment.yaml  prometheus-rbac.yaml  prometheus-rules.yaml  servicemonitor-iris-api.yaml
scripts/: build_and_run.sh  deploy-api.sh  run_tests.sh  run_trainings.sh  setup-k8s.sh  setup.sh  setup_poetry.sh  startup-script.sh.tpl  validate_project.sh
src/: __init__.py  config.py
src/application/: app.py
src/data/: __init__.py  prepare.py
src/evaluation/: __init__.py  evaluate.py
src/models/: __init__.py
src/serving/: __init__.py  app.py  lifespan.py  metrics.py  middleware.py  models.py  routes.py  security.py
src/training/: __init__.py  train.py  train_model.py
terraform/: README.md  backend.tf.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_config.py  test_data_prepare.py  test_evaluation.py  test_metrics.py  test_model.py  test_security.py
