[tool.poetry]
name = "mlops-iris-api"
version = "1.0.0"
description = "API FastAPI pour la classification d'iris - Semaine 1 MLOps"
authors = ["Formation MLOps <formation@mlops.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
scikit-learn = "^1.3.2"
pandas = "^2.1.4"
numpy = "^1.25.2"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"
requests = "^2.31.0"
slowapi = "^0.1.9"
mlflow = "^2.9.2"
dvc = {extras = ["gs", "s3", "azure", "oss", "ssh", "hdfs", "webdav", "gdrive"], version = "^3.41.0"}
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
# Longueur maximale des lignes (cohérent avec black)
max-line-length = 88

# Extensions à ignorer (incompatibles avec Black)
extend-ignore = "E203,W503,E266"

# Note: Les autres options (exclude, select, statistics, etc.) sont définies
# en ligne de commande dans le Makefile et le workflow CI car flake8 ne lit
# pas correctement toutes les options depuis pyproject.toml

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v"
]
